# rag

./: pyproject.toml
advanced_chunking/: semantic_chunking.ipynb
data_ingest_parsing/: csv_excel_parsing.ipynb  data_ingestion.ipynb  data_parsing_doc.ipynb  data_parsing_pdf.ipynb  database_parsing.ipynb  json_parsing.ipynb
data_ingest_parsing/data/structured_files/: inventory.xlsx
data_ingest_parsing/data/text_files/: machine_learning.txt  python_intro.txt
hybrid_search_strategies/: dense_sparse.ipynb  mmr.ipynb  reranking.ipynb
multi_model/: multimodel_openai.ipynb
query_enhancement/: hyde.ipynb  query_decomposition.ipynb  query_expansion.ipynb
query_enhancement/output/langchain/: chroma.sqlite3
query_enhancement/output/steve_jobs_for_hyde.db/: chroma.sqlite3
vector_embeddings_and_databases/: embedding.ipynb  openai_embeddings.ipynb
vector_stores/: chromadb.ipynb  faiss.ipynb  in_memory_vector_stores.ipynb
vector_stores/chroma_db/: chroma.sqlite3
vector_stores/faiss_index/: index.faiss  index.pkl
